<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/bottomSheetContainer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="@drawable/bottom_sheet_background">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_new_bank_account_label"
        android:textColor="@color/dark_grey"
        android:textSize="20sp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="5dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:background="@color/light_grey" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_name"
        android:paddingStart="10dp"
        android:textSize="18sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:background="@color/light_grey" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_balance"
        android:paddingStart="10dp"
        android:inputType="number"
        android:textSize="18sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:background="@color/light_grey" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:gravity="right"
        android:entries="@array/currency_types" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:background="@color/light_grey" />

    <Spinner
        android:id="@+id/bank_account_type_spinner"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:gravity="center_horizontal"
        android:entries="@array/type_of_account" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:background="@color/light_grey" />

    <EditText
        android:id="@+id/bottom_sheet_charge_edit_t"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/charge_hint"
        android:paddingStart="10dp"
        android:inputType="number"
        android:visibility="gone"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/bottom_sheet_percent_edit_t"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/percent_hint"
        android:paddingStart="10dp"
        android:inputType="number"
        android:visibility="gone"
        android:textSize="18sp" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/add_bank_account_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_button"
        android:layout_gravity="center"
        android:textColor="@color/white"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:background="@drawable/button_background" />


</LinearLayout>